@@ -1,3 +1,8 @@
+2020-08-06 Sergey Belyashov <sergey.belyashov@gmail.com>
+
+	* src/z80/peep.c:
+	  More accurate Z80 flag handling by notUsed.
+
 2020-08-06 Philipp Klaus Krause <pkk AT spth.de>
 
 	* src/z80/gen.c:
